--- a/second_test.html
+++ b/second_test.html
@@ -3,18 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Intermediate HTML Structure</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to HTML intermediate</h1>
-    <p>This is a sample webpage structure</p>
-
-     <!-- an unordered list with 3 lists -->
+    <!-- an unordered list with 3 lists -->
      <ul>
         <li>class="important"</li>
         <li>data-info="extra info"</li>
         <li><a href=""https://www.example.com">Go to Example</a></li>
      </ul>
-     
 </body>
 </html>
