--- a/first_test.html
+++ b/first_test.html
@@ -15,6 +15,11 @@
         <li>data-info="extra info"</li>
         <li><a href=""https://www.example.com">Go to Example</a></li>
      </ul>
-     
+     <!-- paragraph -->
+      <p>This is a sample paragraph</p>
+      <hr>
+      <br>
+      <p>this is a <b>bold text</b>with a <i>italicized text</i> </p>
+      
 </body>
 </html>
