--- a/first_test.html
+++ b/first_test.html
@@ -21,5 +21,12 @@
       <br>
       <p>this is a <b>bold text</b>with a <i>italicized text</i> </p>
       
+      <!-- a paragraph with formatting tags -->
+      <h2>HTML Formatting Example</h2>
+      <blockquote>Albert Einstein: 'Imagination is more important than knowledge'.</blockquote>
+      <p><u>This is an underlined sentence</u></p>
+      <p><s>incorrect</s>correct</p>
+
+
 </body>
 </html>
