--- a/second_test.html
+++ b/second_test.html
@@ -12,5 +12,6 @@
         <li>data-info="extra info"</li>
         <li><a href=""https://www.example.com">Go to Example</a></li>
      </ul>
+     <article><p>Semantic HTML helps make web content more accessible."</p></article>
 </body>
 </html>
