--- a/first_test.html
+++ b/first_test.html
@@ -27,6 +27,16 @@
       <p><u>This is an underlined sentence</u></p>
       <p><s>incorrect</s>correct</p>
 
-
+      <!-- blog post  -->
+      <header><h1>Understanding Semantic HTML</h1>
+        <article><p>Semantic HTML helps make web content more accessible</p></article>  
+        <nav>
+           <ul>
+               <li><a href="#Home">Home</a></li>
+               <li><a href="#About">About</a></li>
+           </ul>
+        </nav> 
+        </header>
+       <footer><p>© 2025 My Website</p></footer>
 </body>
 </html>
