--- a/first_test.html
+++ b/first_test.html
@@ -38,5 +38,8 @@
         </nav> 
         </header>
        <footer><p>© 2025 My Website</p></footer>
+
+       <!-- image inserting -->
+        <img src="images/image.jpg" alt="A beautiful landscape" width="500" height="300">
 </body>
 </html>
