--- a/first_test.html
+++ b/first_test.html
@@ -41,5 +41,22 @@
 
        <!-- image inserting -->
         <img src="images/image.jpg" alt="A beautiful landscape" width="500" height="300">
+
+        <!--  -->
+        <ol>
+            <li>HTML List Types</li>
+            <li>HTML Tags
+              <ul>
+                <li>Inline elements</li>
+                <li>Block elements</li>
+              </ul>
+            </li>
+            <li>HTML Elements</li>
+          </ol>
+        
+          <p>
+            <div>this is a block level element <span>and a inline element</span> example paragraph</div>
+            
+          </p>
 </body>
 </html>
