--- a/test2.html
+++ b/test2.html
@@ -6,13 +6,29 @@
     <title>Login form</title>
 </head>
 <body>
-    <!-- q1_loginform -->
     <form action="">
+    <!-- q1_loginform with username,password-->
+    
         <label for="username">Username</label>
         <input type="text" name="username" id="user" required><br><br>
 
         <label for="password">Password</label>
         <input type="password" name="password" id="password" required><br><br>
+
+        <button type="submit">submit</button><br><br>
+
+    <!-- q2_ form with email,password,date picker-->
+        <label for="fullname">Fullname</label>
+        <input type="text" name="fullname" id="fullname"><br><br>
+
+        <label for="email">Email</label>
+        <input type="email" name="email" id="email" placeholder="ex:user@example.com" required><br><br>
+
+        <label for="password">Password</label>
+        <input type="password" name="password" id="password"><br><br>
+
+        <label for="date">DateOfBirth</label>
+        <input type="date" name="date" id="date"><br><br>
 
         <button type="submit">submit</button>
     </form>
