--- a/test2.html
+++ b/test2.html
@@ -30,7 +30,38 @@
         <label for="date">DateOfBirth</label>
         <input type="date" name="date" id="date"><br><br>
 
-        <button type="submit">submit</button>
+        <button type="submit">submit</button><br><br>
     </form>
+    <!-- q3_table -->
+    <table border="1">
+        <thead>
+            <tr>
+                <th>Fruit Name</th>
+                <th>Quantity</th>
+                <th>Price/each(in rupees)</th>
+                <th>Total Price</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><b>Dragon Fruit</b></td>
+                <td>2</td>
+                <td>30</td>
+                <td>60</td>
+            </tr>
+            <tr>
+                <td><b>Custard Apple</b></td>
+                <td>4</td>
+                <td>10</td>
+                <td>40</td>
+            </tr>
+            <tr>
+                <td><b>Coconut</b></td>
+                <td>2</td>
+                <td>10</td>
+                <td>20</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
