--- a/test2.html
+++ b/test2.html
@@ -63,5 +63,20 @@
             </tr>
         </tbody>
     </table>
+    <br><br>
+    <!-- q5 image gallery -->
+     <h3>Image gallery</h3>
+     <a href="https://images.pexels.com/photos/1563356/pexels-photo-1563356.jpeg?auto=compress&cs=tinysrgb&w=400">
+     <img src="https://images.pexels.com/photos/1563356/pexels-photo-1563356.jpeg?auto=compress&cs=tinysrgb&w=400" alt="source i snot working image1">
+    </a><br><br>
+
+     <a href="https://images.pexels.com/photos/1323550/pexels-photo-1323550.jpeg?auto=compress&cs=tinysrgb&w=400">
+     <img src="https://images.pexels.com/photos/1323550/pexels-photo-1323550.jpeg?auto=compress&cs=tinysrgb&w=400" alt="source is not working image2">
+    </a><br><br>
+
+    <a href="https://images.pexels.com/photos/1583582/pexels-photo-1583582.jpeg?auto=compress&cs=tinysrgb&w=400">
+        <img src="https://images.pexels.com/photos/1583582/pexels-photo-1583582.jpeg?auto=compress&cs=tinysrgb&w=400" alt="source is not working image3">
+    </a><br><br>
+    
 </body>
 </html>
