--- a/test2.html
+++ b/test2.html
@@ -77,6 +77,13 @@
     <a href="https://images.pexels.com/photos/1583582/pexels-photo-1583582.jpeg?auto=compress&cs=tinysrgb&w=400">
         <img src="https://images.pexels.com/photos/1583582/pexels-photo-1583582.jpeg?auto=compress&cs=tinysrgb&w=400" alt="source is not working image3">
     </a><br><br>
-    
+    <!-- q6 dropdownlist -->
+    <label for="countries">Countries</label>
+    <select name="countries" id="countries">
+    <option value="default">Select One</option>
+    <option value="india">india</option>
+    <option value="pakistan">pakistan</option>
+    <option value="Australlia">Australlia</option>
+   </select>
 </body>
 </html>
