--- a/test2.html
+++ b/test2.html
@@ -31,7 +31,7 @@
         <input type="date" name="date" id="date"><br><br>
 
         <button type="submit">submit</button><br><br>
-    </form>
+    
     <!-- q3_table -->
     <table border="1">
         <thead>
@@ -84,6 +84,18 @@
     <option value="india">india</option>
     <option value="pakistan">pakistan</option>
     <option value="Australlia">Australlia</option>
-   </select>
+   </select><br><br>
+   <!-- q9 form with checkboxes -->
+    <label for="language">Programming LAnguage :</label>
+    <label for="Python">python</label>
+    <input type="checkbox" name="python" id="python" >
+   <label for="javascript">javascript</label>
+   <input type="checkbox" name="javascript" id="javascript">
+   <label for="java">java</label>
+   <input type="checkbox" name="java" id="java">
+   <label for="C++">C++</label>
+   <input type="checkbox" name="C++" id="C++">
+   
+</form>
 </body>
 </html>
