--- a/third_test.html
+++ b/third_test.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Html & CSS</title>
     <style>
+        /* q1 */
        .styled-link{
             color: blue;
         }
@@ -13,6 +14,16 @@
         }
          .styled-link:active {
             color: green;
+        }
+        /* q2 */
+        h1 {
+            font-style: arial;
+            text-shadow:2px 2px 4px rgba(0,0,0,0.5) ;
+        }
+        p {
+            font-size: 1.2rem;
+            line-height: 1.6;
+            text-align: justify; 
         }
     </style>
 
@@ -31,5 +42,9 @@
         <li><a href="#link5" class="styled-link">link5</a></li>
         
     </ul>
+    <!-- q2 -->
+    <h1>Welcome to My Webpage</h1>
+    <p>this a webpage </p>
+
 </body>
 </html>
