--- a/third_test.html
+++ b/third_test.html
@@ -25,6 +25,13 @@
             line-height: 1.6;
             text-align: justify; 
         }
+        /* q3 */
+        .card {
+            border: 1px solid gray;
+            padding: 20px; 
+            margin: 10px;
+            max-width: 300px; 
+        }
     </style>
 
 </head>
@@ -45,6 +52,9 @@
     <!-- q2 -->
     <h1>Welcome to My Webpage</h1>
     <p>this a webpage </p>
-
+    <!-- q3 -->
+    <div class="card">
+        <p>This is a simple card with a border, padding, and margin.</p>
+    </div>
 </body>
 </html>
