--- a/third_test.html
+++ b/third_test.html
@@ -32,6 +32,15 @@
             margin: 10px;
             max-width: 300px; 
         }
+        /* q5 */
+        button {
+            background-color: blue;
+            color: white;
+            transition: background-color 0.3s ease;
+        }
+        button:hover {
+            background-color: darkblue;
+        }
     </style>
 
 </head>
@@ -56,5 +65,7 @@
     <div class="card">
         <p>This is a simple card with a border, padding, and margin.</p>
     </div>
+    <!-- q4 -->
+    <button>Click Me</button>
 </body>
 </html>
